--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 
 <ul>
   <li *ngIf="rockbands.length === 0">
-    No hay bandas de rock
+    No hay bandas de rock!!!
   </li>
   <li *ngFor="let rock of rockbands; index as i">
     {{ rock }} {{ i + 1 }}
